--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Very passionate Frontend Software Developer who loves to dabble across various t
 <a href=https://github.com/LaminSanneh title=Github target=_blank rel=noopener><i class="fab fa-github"></i></a>
 </li>
 <li>
-<a href=# title=Stackoverflow target=_blank rel=noopener><i class="fab fa-stack-overflow"></i></a>
+<a href=https://stackoverflow.com/users/776878/lamin-sanneh title=Stackoverflow target=_blank rel=noopener><i class="fab fa-stack-overflow"></i></a>
 </li>
 <li>
 <a href=https://gm.linkedin.com/in/lamin-sanneh-59329649 title=LinkedIn target=_blank rel=noopener><i class="fab fa-linkedin"></i></a>
@@ -368,6 +368,181 @@ Manchester
 </div>
 <div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
 <div class="circle font-weight-bold">4</div>
+</div>
+</div>
+<div class="row horizontal-line">
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+<div class="col-10 col-lg-8">
+<hr>
+</div>
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+</div>
+<div class="row align-items-center d-flex">
+<div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
+<div class="circle font-weight-bold">5</div>
+</div>
+<div class="col-10 col-lg-8">
+<div class=experience-entry-heading>
+<h5>Web Developer - Frontend concept developer (Internship)</h5>
+<h6>R&R Music Ltd</h6>
+<p class=text-muted>May 2013 - July 2013,
+London
+</p>
+</div>
+<p>A music company in the same category of the likes of spotify, deezer.</p>
+<h6 class=text-muted>Responsibilities:</h6>
+<ul class=justify-content-around>
+<li>Worked with the said music company above. While there, I had to create frontend prototypes using jQuery, Ember.js, vanilla Js, SASS CSS and HTML.</li>
+<li>This was so that we could give concept overview to our investors and partners before the final products are to be developed.</li>
+<li>I collaborated with the team in Kiev(Ukraine), as the company was based in London but had other international headquarters in USA, Spain and Ukraine</li>
+<li>I also had to collaborate with graphic designers, UX designers who were from different parts of Europe in-house to create prototypes.</li>
+<li>This was around teh time when responsive design was a big buzzword and I was invited to give a presentation on it to the rest of the company by my manager, which was a valuable experience to me as I had to explain the concept to non-programmers as well.</li>
+</ul>
+</div>
+</div>
+<div class="row horizontal-line">
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+<div class="col-10 col-lg-8">
+<hr>
+</div>
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+</div>
+<div class="row align-items-center justify-content-end d-flex">
+<div class="col-10 col-lg-8">
+<div class=experience-entry-heading>
+<h5>ASP.Net/C# Software Developer</h5>
+<h6><a href=https://www.gazprom-energy.co.uk title="Gazprom Energy" target=_blank rel=noopener>Gazprom Energy</a></h6>
+<p class=text-muted>2012 - 2013,
+Manchester
+</p>
+</div>
+<p>A russian company, with subsidiaries in Uk, specializing in selling energy(gas and electricity).</p>
+<h6 class=text-muted>Responsibilities:</h6>
+<ul class=justify-content-around>
+<li>I worked here using microsoft technologies like MS SQL server, Visual Studio, entity framework.</li>
+<li>I was in charge of several applications, one of which is a reporting application, used by several departments.</li>
+<li>The app was built using WPF(Windows Presentation FOundation), and was quite complex with several micro services all bundled in a monolithic package, each communicating with each other using C# interfaces.</li>
+<li>Sometimes, before a feature was completed, I had to write some complex SQL to export the report in excel format so the in-house client can carry out their task.</li>
+<li>The application features went through several stages of development, alpha and testing before being released to the end user.</li>
+<li>I gained valuable experience using C# which I self-learned. Using entity framework was really fun and it opened a whole new world of experience when it came to software development and interfacing with the database.</li>
+<li>I also enjoyed using linq technology from microsoft.</li>
+</ul>
+</div>
+<div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
+<div class="circle font-weight-bold">6</div>
+</div>
+</div>
+<div class="row horizontal-line">
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+<div class="col-10 col-lg-8">
+<hr>
+</div>
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+</div>
+<div class="row align-items-center d-flex">
+<div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
+<div class="circle font-weight-bold">7</div>
+</div>
+<div class="col-10 col-lg-8">
+<div class=experience-entry-heading>
+<h5>PHP Web Developer</h5>
+<h6>Travel Indigo(Part time)</h6>
+<p class=text-muted>2011 - 2012,
+Manchester
+</p>
+</div>
+<p>An international Group Travel and hotel booking agency.</p>
+<h6 class=text-muted>Responsibilities:</h6>
+<ul class=justify-content-around>
+<li>While at University, I worked parttime for a travel agency called Travel Indigo, which specializes in group travel internationally and hotel bookings.</li>
+<li>I and another webdeveloper were responsible for building the initial version of the travel website.</li>
+<li>We had to tap into several apis, primarily travelport, which at that stage only supported xml results(now I believe they do json).</li>
+<li>The xml is parsed using php libraries(Zend framework) and stored in a more manageable format in our database.</li>
+<li>We had to setup a system which caches the results which the user searches so we donot hit the api again.</li>
+<li>We also built custom websites for other individuals or companies who wanted to open their own fligh agency business. The custom sites were based on our base site.</li>
+<li>Since it was a small team, I ws responsible for the design, backend and frontend development.</li>
+<li>We used vanilla php coupled with some libraries from Zend framework.</li>
+<li>While there, I was the lead technical team leader, and along with my I.T., manager conducted several interviews to add more developers to the team, and have learned valuable communication skills through that.</li>
+</ul>
+</div>
+</div>
+<div class="row horizontal-line">
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+<div class="col-10 col-lg-8">
+<hr>
+</div>
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+</div>
+<div class="row align-items-center justify-content-end d-flex">
+<div class="col-10 col-lg-8">
+<div class=experience-entry-heading>
+<h5>PHP Web Developer</h5>
+<h6>Manchester Notebook</h6>
+<p class=text-muted>2011 - Present,
+Manchester
+</p>
+</div>
+<p>A Manchester university group which provides a platform where several of University societies can connect, recruit and communicate with their members and potential members.</p>
+<h6 class=text-muted>Responsibilities:</h6>
+<ul class=justify-content-around>
+<li>I used this opportunity to Jumpstart my web development career.</li>
+<li>It was the first time, I had to build a commercial website.</li>
+<li>Using vanilla PHP (dreamweaver), Mysql, HTML and CSS.</li>
+<li>I gained valuable communication skills, having to have regular meeting with the owners to give status feedback and plan the next stage of development.</li>
+</ul>
+</div>
+<div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
+<div class="circle font-weight-bold">8</div>
+</div>
+</div>
+<div class="row horizontal-line">
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+<div class="col-10 col-lg-8">
+<hr>
+</div>
+<div class="col-1 col-lg-2 timeline-side-div">
+<div class=corner></div>
+</div>
+</div>
+<div class="row align-items-center d-flex">
+<div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
+<div class="circle font-weight-bold">9</div>
+</div>
+<div class="col-10 col-lg-8">
+<div class=experience-entry-heading>
+<h5>PHP Web Developer</h5>
+<h6>University of Manchester First Year Project</h6>
+<p class=text-muted>2010 - Present,
+Manchester
+</p>
+</div>
+<p>Manchester University First Uear project</p>
+<h6 class=text-muted>Responsibilities:</h6>
+<ul class=justify-content-around>
+<li>I led a team of five in our University web project.</li>
+<li>Using codeigniter php framework, we were tasked with building a sports website where sport teams can list their team details and let players apply to join the team.</li>
+<li>We used jQuery along with css and the php framework to carry out the tasks.</li>
+<li>Later, we had to demonstrate the project in fron of the other teams.</li>
+<li>I gained valuable project planning and team communication experiences while working on this project.</li>
+</ul>
 </div>
 </div>
 </div>
