--- a/notes/vue.js/advanced/lifecycle/index.html
+++ b/notes/vue.js/advanced/lifecycle/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <meta property="og:title" content="Lifecycle Hooks">
-<meta property="og:description" content="Lifecycle Hooks beforeCreate created beforeMount mounted beforeUpdate updated beforeDestroy destroyed     ">
+<meta property="og:description" content="Vuejs Lifecycle Hooks beforeCreate created beforeMount mounted beforeUpdate updated beforeDestroy destroyed     ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="http://laminsanneh.com/notes/vue.js/advanced/lifecycle/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
@@ -54,13 +54,30 @@ Lamin Sanneh</a>
 <i class="fas fa-plus-circle"></i><a href=/notes/vue.js/basic/>Basic</a>
 <ul>
 <li><a href=/notes/vue.js/basic/expressions/ title=Expressions>Expressions</a></li>
-<li><a href=/notes/vue.js/basic/binding/ title=Bindings>Bindings</a></li>
+<li><a href=/notes/vue.js/basic/binding/ title=Binding>Binding</a></li>
+<li><a href=/notes/vue.js/basic/list-rendering/ title="List Rendering">List Rendering</a></li>
+<li><a href=/notes/vue.js/basic/actions-events/ title=Actions/Events>Actions/Events</a></li>
+<li><a href=/notes/vue.js/basic/bootstrap/ title=Bootstrap>Bootstrap</a></li>
 </ul>
 </li>
 <li>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/vue.js/advanced/>Advanced</a>
 <ul class=active>
 <li><a class=active href=/notes/vue.js/advanced/lifecycle/ title="Lifecycle Hooks">Lifecycle Hooks</a></li>
+<li><a href=/notes/vue.js/advanced/component-anatomy/ title="Component Anatomy">Component Anatomy</a></li>
+<li><a href=/notes/vue.js/advanced/custom-events/ title="Custom Events">Custom Events</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/mongoose/>Mongoose.js</a>
+<ul>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/mongoose/basic/>Bacic</a>
+<ul>
+<li><a href=/notes/mongoose/basic/connection/ title="Mongoose Connection">Mongoose Connection</a></li>
+<li><a href=/notes/mongoose/basic/schema/ title="Mongoose Schema">Mongoose Schema</a></li>
 </ul>
 </li>
 </ul>
@@ -82,7 +99,7 @@ Lamin Sanneh</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>Lifecycle Hooks</span></h5>
+<h5 class=note-title><span>Vuejs Lifecycle Hooks</span></h5>
 <div class=card>
 <div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-js data-lang=js><span style=color:#a6e22e>beforeCreate</span>
 <span style=color:#a6e22e>created</span>
