--- a/notes/bash/index.html
+++ b/notes/bash/index.html
@@ -54,13 +54,30 @@ Lamin Sanneh</a>
 <i class="fas fa-plus-circle"></i><a href=/notes/vue.js/basic/>Basic</a>
 <ul>
 <li><a href=/notes/vue.js/basic/expressions/ title=Expressions>Expressions</a></li>
-<li><a href=/notes/vue.js/basic/binding/ title=Bindings>Bindings</a></li>
+<li><a href=/notes/vue.js/basic/binding/ title=Binding>Binding</a></li>
+<li><a href=/notes/vue.js/basic/list-rendering/ title="List Rendering">List Rendering</a></li>
+<li><a href=/notes/vue.js/basic/actions-events/ title=Actions/Events>Actions/Events</a></li>
+<li><a href=/notes/vue.js/basic/bootstrap/ title=Bootstrap>Bootstrap</a></li>
 </ul>
 </li>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/vue.js/advanced/>Advanced</a>
 <ul>
 <li><a href=/notes/vue.js/advanced/lifecycle/ title="Lifecycle Hooks">Lifecycle Hooks</a></li>
+<li><a href=/notes/vue.js/advanced/component-anatomy/ title="Component Anatomy">Component Anatomy</a></li>
+<li><a href=/notes/vue.js/advanced/custom-events/ title="Custom Events">Custom Events</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/mongoose/>Mongoose.js</a>
+<ul>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/mongoose/basic/>Bacic</a>
+<ul>
+<li><a href=/notes/mongoose/basic/connection/ title="Mongoose Connection">Mongoose Connection</a></li>
+<li><a href=/notes/mongoose/basic/schema/ title="Mongoose Schema">Mongoose Schema</a></li>
 </ul>
 </li>
 </ul>
