--- a/notes/vue.js/advanced/custom-events/index.html
+++ b/notes/vue.js/advanced/custom-events/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Advanced</title>
+<title>Custom Events</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -11,10 +11,13 @@
 <link rel=stylesheet href=/css/flag-icon.min.css>
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
-<meta property="og:title" content="Advanced">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="http://laminsanneh.com/notes/vue.js/advanced/">
+<meta property="og:title" content="Custom Events">
+<meta property="og:description" content="Vuejs Custom Events Use props to pass data into child components, custom events to pass data to parent elements. Set listener on component, within its parent:
+<button-counter v-on:incrementBy=&#34;incWithVal&#34;>...</button-counter> Inside parent component:
+methods: { incWithVal: function (toAdd) { ... } } Inside button-counter template:
+this.$emit('incrementyBy', 5)     ">
+<meta property="og:type" content="article">
+<meta property="og:url" content="http://laminsanneh.com/notes/vue.js/advanced/custom-events/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -65,7 +68,7 @@ Lamin Sanneh</a>
 <ul class=active>
 <li><a href=/notes/vue.js/advanced/lifecycle/ title="Lifecycle Hooks">Lifecycle Hooks</a></li>
 <li><a href=/notes/vue.js/advanced/component-anatomy/ title="Component Anatomy">Component Anatomy</a></li>
-<li><a href=/notes/vue.js/advanced/custom-events/ title="Custom Events">Custom Events</a></li>
+<li><a class=active href=/notes/vue.js/advanced/custom-events/ title="Custom Events">Custom Events</a></li>
 </ul>
 </li>
 </ul>
@@ -99,72 +102,6 @@ Lamin Sanneh</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>Vuejs Lifecycle Hooks</span></h5>
-<div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-js data-lang=js><span style=color:#a6e22e>beforeCreate</span>
-<span style=color:#a6e22e>created</span>
-<span style=color:#a6e22e>beforeMount</span>
-<span style=color:#a6e22e>mounted</span>
-<span style=color:#a6e22e>beforeUpdate</span>
-<span style=color:#a6e22e>updated</span>
-<span style=color:#a6e22e>beforeDestroy</span>
-<span style=color:#a6e22e>destroyed</span>
-</code></pre></div></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>Vuejs Component Anatomy</span></h5>
-<div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-html data-lang=html>&lt;<span style=color:#f92672>template</span>&gt;
-  &lt;<span style=color:#f92672>span</span>&gt;{{ message }}&lt;/<span style=color:#f92672>span</span>&gt;
-&lt;/<span style=color:#f92672>template</span>&gt;
-
-&lt;<span style=color:#f92672>script</span>&gt;
-  <span style=color:#66d9ef>import</span> <span style=color:#a6e22e>ProductComponent</span> <span style=color:#a6e22e>from</span> <span style=color:#e6db74>&#39;@/components/ProductComponent&#39;</span>
-  <span style=color:#66d9ef>import</span> <span style=color:#a6e22e>ReviewComponent</span> <span style=color:#a6e22e>from</span> <span style=color:#e6db74>&#39;@/components/ReviewComponent&#39;</span>
-  
-  <span style=color:#66d9ef>export</span> <span style=color:#66d9ef>default</span> {
-    <span style=color:#a6e22e>components</span><span style=color:#f92672>:</span> { <span style=color:#75715e>// Components that can be used in the template
-</span><span style=color:#75715e></span>      <span style=color:#a6e22e>ProductComponent</span>,
-      <span style=color:#a6e22e>ReviewComponent</span>
-    },
-    <span style=color:#a6e22e>props</span><span style=color:#f92672>:</span> { <span style=color:#75715e>// The parameters the component accepts
-</span><span style=color:#75715e></span>      <span style=color:#a6e22e>message</span><span style=color:#f92672>:</span> String,
-      <span style=color:#a6e22e>product</span><span style=color:#f92672>:</span> Object,
-      <span style=color:#a6e22e>email</span><span style=color:#f92672>:</span> {
-        <span style=color:#a6e22e>type</span><span style=color:#f92672>:</span> String,
-        <span style=color:#a6e22e>required</span><span style=color:#f92672>:</span> <span style=color:#66d9ef>true</span>,
-        <span style=color:#66d9ef>default</span><span style=color:#f92672>:</span> <span style=color:#e6db74>&#39;none&#39;</span>,
-        <span style=color:#a6e22e>validator</span><span style=color:#f92672>:</span> <span style=color:#66d9ef>function</span> (<span style=color:#a6e22e>value</span>) {
-          <span style=color:#75715e>// Should return true if value is valid
-</span><span style=color:#75715e></span>        }
-      }
-    },
-    <span style=color:#a6e22e>data</span><span style=color:#f92672>:</span> <span style=color:#66d9ef>function</span> () { <span style=color:#75715e>// Must be a function
-</span><span style=color:#75715e></span>      <span style=color:#66d9ef>return</span> {
-        <span style=color:#a6e22e>firstName</span><span style=color:#f92672>:</span> <span style=color:#e6db74>&#39;Vue&#39;</span>,
-        <span style=color:#a6e22e>lastName</span><span style=color:#f92672>:</span> <span style=color:#e6db74>&#39;Mastery&#39;</span>
-      }
-    },
-    <span style=color:#a6e22e>computed</span><span style=color:#f92672>:</span> { <span style=color:#75715e>// Return cached values until dependencies change
-</span><span style=color:#75715e></span>      <span style=color:#a6e22e>fullName</span><span style=color:#f92672>:</span> <span style=color:#66d9ef>function</span> () {
-        <span style=color:#66d9ef>return</span> <span style=color:#e6db74>`</span><span style=color:#e6db74>${</span><span style=color:#66d9ef>this</span>.<span style=color:#a6e22e>firstName</span><span style=color:#e6db74>}</span><span style=color:#e6db74> </span><span style=color:#e6db74>${</span><span style=color:#66d9ef>this</span>.<span style=color:#a6e22e>lastName</span><span style=color:#e6db74>}</span><span style=color:#e6db74>`</span>
-      }
-    },
-    <span style=color:#a6e22e>watch</span><span style=color:#f92672>:</span> { <span style=color:#75715e>// Called when firstName changes value
-</span><span style=color:#75715e></span>      <span style=color:#a6e22e>firstName</span><span style=color:#f92672>:</span> <span style=color:#66d9ef>function</span> (<span style=color:#a6e22e>value</span>, <span style=color:#a6e22e>oldValue</span>) { <span style=color:#75715e>/* ... */</span> }
-    },
-    <span style=color:#a6e22e>methods</span><span style=color:#f92672>:</span> { <span style=color:#75715e>/* ... */</span> }
-  }
-&lt;/<span style=color:#f92672>script</span>&gt;
-</code></pre></div></div>
-</div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
 <h5 class=note-title><span>Vuejs Custom Events</span></h5>
 <div class=card>
 <div class=card-body><p>Use props to pass data into child components, custom events to pass data to parent elements.
@@ -180,8 +117,6 @@ Set listener on component, within its parent:</p>
 </div>
 </div>
 </div>
-</div>
-<div class=paginator>
 </div>
 </div>
 </section>
