--- a/notes/vue.js/basic/list-rendering/index.html
+++ b/notes/vue.js/basic/list-rendering/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Expressions</title>
+<title>List Rendering</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -11,10 +11,14 @@
 <link rel=stylesheet href=/css/flag-icon.min.css>
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
-<meta property="og:title" content="Expressions">
-<meta property="og:description" content="Vuejs Expressions <div id=&#34;app&#34;> <p>I have a {{ product }}</p> <p>{{ product + 's' }}</p> <p>{{ isWorking ? 'YES' : 'NO' }}</p> <p>{{ product.getSalePrice() }}</p> </div>     ">
+<meta property="og:title" content="List Rendering">
+<meta property="og:description" content="Vuejs List Rendering Basic array loop
+<li v-for=&#34;item in items&#34; :key=&#34;item.id&#34;> {{ item }} </li> Loop with access to index
+<li v-for=&#34;(item, index) in items&#34;>...</li> Baisc object loop
+<li v-for=&#34;value in object&#34;>...</li> <li v-for=&#34;(value, index) in object&#34;>...</li> <li v-for=&#34;(value, name, index) in object&#34;>...</li> Loop using component instead of html native element e.g. div, li
+<cart-product v-for=&#34;item in products&#34; :product=&#34;item&#34; :key=&#34;item.id&#34;>     ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://laminsanneh.com/notes/vue.js/basic/expressions/"><meta property="article:section" content="notes">
+<meta property="og:url" content="http://laminsanneh.com/notes/vue.js/basic/list-rendering/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -53,9 +57,9 @@ Lamin Sanneh</a>
 <li>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/vue.js/basic/>Basic</a>
 <ul class=active>
-<li><a class=active href=/notes/vue.js/basic/expressions/ title=Expressions>Expressions</a></li>
+<li><a href=/notes/vue.js/basic/expressions/ title=Expressions>Expressions</a></li>
 <li><a href=/notes/vue.js/basic/binding/ title=Binding>Binding</a></li>
-<li><a href=/notes/vue.js/basic/list-rendering/ title="List Rendering">List Rendering</a></li>
+<li><a class=active href=/notes/vue.js/basic/list-rendering/ title="List Rendering">List Rendering</a></li>
 <li><a href=/notes/vue.js/basic/actions-events/ title=Actions/Events>Actions/Events</a></li>
 <li><a href=/notes/vue.js/basic/bootstrap/ title=Bootstrap>Bootstrap</a></li>
 </ul>
@@ -99,14 +103,20 @@ Lamin Sanneh</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>Vuejs Expressions</span></h5>
+<h5 class=note-title><span>Vuejs List Rendering</span></h5>
 <div class=card>
-<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-html data-lang=html>&lt;<span style=color:#f92672>div</span> <span style=color:#a6e22e>id</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;app&#34;</span>&gt;
-  &lt;<span style=color:#f92672>p</span>&gt;I have a {{ product }}&lt;/<span style=color:#f92672>p</span>&gt;
-  &lt;<span style=color:#f92672>p</span>&gt;{{ product + &#39;s&#39; }}&lt;/<span style=color:#f92672>p</span>&gt;
-  &lt;<span style=color:#f92672>p</span>&gt;{{ isWorking ? &#39;YES&#39; : &#39;NO&#39; }}&lt;/<span style=color:#f92672>p</span>&gt;
-  &lt;<span style=color:#f92672>p</span>&gt;{{ product.getSalePrice() }}&lt;/<span style=color:#f92672>p</span>&gt;
-&lt;/<span style=color:#f92672>div</span>&gt;
+<div class=card-body><p>Basic array loop</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-html data-lang=html>&lt;<span style=color:#f92672>li</span> <span style=color:#a6e22e>v-for</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;item in items&#34;</span> <span style=color:#a6e22e>:key</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;item.id&#34;</span>&gt;
+  {{ item }}
+&lt;/<span style=color:#f92672>li</span>&gt;
+</code></pre></div><p>Loop with access to index</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-html data-lang=html>&lt;<span style=color:#f92672>li</span> <span style=color:#a6e22e>v-for</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;(item, index) in items&#34;</span>&gt;...&lt;/<span style=color:#f92672>li</span>&gt;
+</code></pre></div><p>Baisc object loop</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-html data-lang=html>&lt;<span style=color:#f92672>li</span> <span style=color:#a6e22e>v-for</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;value in object&#34;</span>&gt;...&lt;/<span style=color:#f92672>li</span>&gt;
+&lt;<span style=color:#f92672>li</span> <span style=color:#a6e22e>v-for</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;(value, index) in object&#34;</span>&gt;...&lt;/<span style=color:#f92672>li</span>&gt;
+&lt;<span style=color:#f92672>li</span> <span style=color:#a6e22e>v-for</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;(value, name, index) in object&#34;</span>&gt;...&lt;/<span style=color:#f92672>li</span>&gt;
+</code></pre></div><p>Loop using component instead of html native element e.g. div, li</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-html data-lang=html>&lt;<span style=color:#f92672>cart-product</span> <span style=color:#a6e22e>v-for</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;item in products&#34;</span> <span style=color:#a6e22e>:product</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;item&#34;</span> <span style=color:#a6e22e>:key</span><span style=color:#f92672>=</span><span style=color:#e6db74>&#34;item.id&#34;</span>&gt;
 </code></pre></div></div>
 </div>
 </div>
